--- a/p1.md
+++ b/p1.md
@@ -1,15 +1,7 @@
-<h1> Iron Fist: The Virtual Fist
-Project Team Members
-Summary Writer: Requires concise writing and a holistic understanding of the project.
-Market Researcher: Requires skills in  research and data interpretation.
-Product Designer: Requires technical knowledge and creativity.
-Devil’s Advocate/Critic: Requires critical thinking and the ability to construct persuasive arguments.
-Conclusion Writer: Requires concise writing and ability to synthesize content.
-Editor & Appendix Creator: Responsible for overall editing of the final document and creation of an appendix for any additional supporting materials. 
+# Iron Fist: The Virtual Fist
+## Project Team Members
 
-Note: For groups of 5 the appendix is not required and the Summary Writer and Conclusion Writer will share responsibility for overall editing of the final document. 
-
-1. Executive Summary (Overview)
+## 1. Executive Summary (Overview)
 Iron Fist: The Virtual Fist is a new type of VR glove designed to give gamers and tech enthusiasts a more realistic and immersive experience. These gloves use advanced technology to allow users to feel real sensations, such as vibrations and resistance, when interacting with objects in virtual worlds. Unlike other VR gloves that are heavy and very expensive, Iron Fist is light, slim, and much more affordable, making it accessible to more people. The controls can also be customized to fit every user's hand, ensuring comfort during long gaming or work situations.
 Haptic Feedback: The gloves provide physical sensations, such as vibrations and force resistance,  giving players the sensation of interacting with real objects and machinery.
 Precise Motion Tracking:  The gloves capture detailed hand and finger movements, allowing for accurate interaction with the virtual environment,  from turning knobs to handling complex industrial tools.
